completed grid layout, sidebar icons

--- a/style.css
+++ b/style.css
@@ -14,15 +14,31 @@ body{
     display: grid;
 }
 
+li{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+
 /**********************/
 /*Sidebar Section*/
 /**********************/
 .sidebar{
-background: aqua;
+background: rgb(0, 157, 255);
 grid-row: 1/4;
 display: flex;
 flex-direction: column;
 gap: 15px;
+padding-left: 20px;
+padding-top: 20px;
+}
+
+.logo{
+    font-size: 24pt;
 }
 
 /**********************/
@@ -42,20 +58,38 @@ gap: 15px;
     justify-content: space-between;
     padding: 15px 10px;
 }
+
+.searchbar>img{
+    filter: invert(100%);
+}
+
+button{
+    color: white;
+    background-color: rgb(27, 27, 230);
+    border-radius: 25px;
+    font-weight: bold;
+    padding: 12px 5px;
+}
+
 /**********************/
 /*Content Section*/
 /**********************/
 .dashboard-content{
-    background: rgb(205, 205, 205);
+    background: rgb(227, 227, 227);
     grid-column: 2/4;
     grid-row:3/4;
-    padding: 10px;
+    padding: 20px;
 }
 
 .content-grid{
     display: grid;
     grid-template-columns: 2fr 1fr;
-    gap: 15px;
+    gap: 5px;
+}
+
+.projects> p{
+    font-weight: bold;
+    padding-bottom: 8px;
 }
 
 .cards{
@@ -66,7 +100,49 @@ gap: 15px;
 
 .card{
     background: white;
-    border-left: 10px solid yellow;
+    border-left: 10px solid rgb(255, 179, 0);
     border-radius: 10px;
     width: 300px;
+    padding: 5px;
+    box-shadow: 5px 5px 5px rgb(106, 106, 106);
+}
+
+.project-title{
+    font-weight: bold;
+}
+
+.social{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.announcements> p,
+.trending> p{
+    font-weight: bold;
+    margin-bottom: 8px;
+}
+
+.announce-list, 
+.trends{
+    display: flex;
+    flex-direction: column;
+    background: white;
+    border-radius: 10px;
+    width: 250px;
+    padding: 25px;
+    box-shadow: 5px 5px 5px rgb(106, 106, 106);
+}
+
+.announce-list li{
+    border-bottom:1px solid grey;
+}
+
+.announce-list li:last-child{
+    border-bottom: 0;
+}
+
+.announce-title,
+.trending-person{
+    font-weight: bold;
 }
