--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ button{
     border: 0;
     border-radius: 25px;
     font-weight: bold;
-    padding: 12px 5px;
+    padding: 12px 15px;
 }
 
 .profile-info p,
@@ -135,6 +135,7 @@ button{
 }
 
 .user-post{
+    display: flex;
     width: 40%;
     gap: 25px;
     justify-content: end;
